--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,12 @@ dependencies:
   retrofit: ^4.1.0
   json_annotation: ^4.8.1
   intl: ^0.19.0
-  flutter_barcode_scanner: ^2.0.0
-  uuid: ^4.0.0
   http: ^1.1.0
   bloc:
   get_it:
   flutter_bloc:
   mobile_scanner: ^5.2.0
-  flutter_secure_storage: ^4.2.1
+  flutter_secure_storage: ^9.1.1
   equatable: ^2.0.7
   mqtt5_client: ^4.11.0
   pretty_dio_logger: ^1.4.0
@@ -75,7 +73,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/cert/isrgrootx1.pem
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
