--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   mqtt5_client: ^4.11.0
   pretty_dio_logger: ^1.4.0
   image_picker: ^1.1.2
+  firebase_core: ^2.13.0
+  firebase_messaging: ^14.0.0
+  change_app_package_name: ^1.5.0
+  flutter_local_notifications: ^19.5.0
+  plugin_wifi_connect: ^2.0.1
 
 dev_dependencies:
   flutter_test:
